Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,8 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def retrieve_titles(soup):\n",
-    "    #Your code here"
+    "def retrieve_titles(soup):\n"
    ]
   },
   {
