Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def retrieve_titles(soup):\n"
+    "def retrieve_titles(soup):\n",
+    "    for i"
    ]
   },
   {
