--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def retrieve_titles(soup):\n",
-    "    for i"
+    "[type(item) for item in list(soup.children)]\n"
    ]
   },
   {
