Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def retrieve_titles(soup):\n",
-    "[type(item) for item in list(soup.children)]\n"
+    "    return[type(item) for item in list(soup.children)]\n"
    ]
   },
   {
