--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "def retrieve_ratings(soup):\n",
-    "    return [item ]"
+    "    return [item for item in list(soup)]"
    ]
   },
   {
