--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,11 @@
    "outputs": [],
    "source": [
     "def retrieve_titles(soup):\n",
-    "    return[type(item) for item in list(soup.children)]\n"
+    "    #Your code here\n",
+    "    warning = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    book_container = warning.nextSibling.nextSibling\n",
+    "    titles = [h3.find('a').attrs['title'] for h3 in book_container.findAll('h3')]\n",
+    "    return titles\n"
    ]
   },
   {
@@ -72,10 +76,7 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def retrieve_ratings(soup):\n",
-    "    return [item for item in list(soup)]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
